--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -14,31 +14,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        go-version: ['1.20', 1.x ]
+        go-version: [stable, oldstable ]
         os: [ubuntu-latest, macos-latest] # Go plugins are only supported on linux, freebsd, and darwin.
     env:
       CGO_ENABLED: 0
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
-          go-version: '1.20'
-          cache: false
-
-      - name: Cache Go modules
-        uses: actions/cache@v3
-        with:
-          # In order:
-          # * Module download cache
-          # * Build cache (Linux)
-          # * Build cache (Mac)
-          path: |
-            ~/go/pkg/mod
-            ~/.cache/go-build
-            ~/Library/Caches/go-build
-          key: ${{ runner.os }}-${{ matrix.go-version }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ matrix.go-version }}-go-
+          go-version: ${{ matrix.go-version }}
 
       - name: Check and get dependencies
         run: |
@@ -56,9 +40,9 @@ jobs:
           CGO_ENABLED: 1
 
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.53.2
+          version: v1.59.1
           # The installation mode `goinstall` always uses `CGO_ENABLED=1`.
           install-mode: goinstall
           args: --timeout=10m
